cf_analysis_results/checkerframework_results/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8.txt
../../../../datasets/june2020_dataset/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:46: error: (required.method.not.called) $$ 4 $$ method close $$ fr $$ java.io.FileReader $$ possible exceptional exit due to in.readLine() with exception type java.io.IOException $$ ( 1248, 1291 ) $$ @MustCall method close may not have been invoked on fr or any of its aliases.
			FileReader fr = new FileReader(configFile);
			           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to in.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:219: error: (required.method.not.called) $$ 4 $$ method close $$ fw $$ java.io.FileWriter $$ possible exceptional exit due to fw.write(processMTTR(ttrs)) with exception type java.io.IOException $$ ( 6130, 6164 ) $$ @MustCall method close may not have been invoked on fw or any of its aliases.
			FileWriter fw = new FileWriter(f);
			           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to fw.write(processMTTR(ttrs)) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/SimFileGenerator.java:51: error: (required.method.not.called) $$ 4 $$ method close $$ fw $$ java.io.FileWriter $$ possible exceptional exit due to fw.write(s + "\n") with exception type java.io.IOException $$ ( 1103, 1137 ) $$ @MustCall method close may not have been invoked on fw or any of its aliases.
		FileWriter fw = new FileWriter(f);
		           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to fw.write(s + "\n") with exception type java.io.IOException
3 errors
